Corrected alignment of nav items on english page.

--- a/_sass/components/_main-nav.scss
+++ b/_sass/components/_main-nav.scss
@@ -52,6 +52,10 @@
         display: inline-flex;
         justify-content: center;
         align-items: center;
+
+        &:lang(en) {
+          padding-top: 5px;
+        }
       }
     }
 
